--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.0.27",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
