--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,7 +18,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
