--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,17 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@types/react": "~18.0.27",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
-    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@types/react": "~18.0.27"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
