--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react": "~18.0.27",
+    "eslint": "^8.40.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
