--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+# Database
 DATABASE_URL="file:./dev.db"
+
+# Github
+GITHUB_CLIENT_ID="806b51be06c703240950"
+GITHUB_CLIENT_SECRET="23c8b89e897e55a2870ac360593151fb7970c6a3"
