--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,15 +16,21 @@
     "eslint": "^8.40.0",
     "expo": "~48.0.15",
     "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.3",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "typescript": "^4.9.4",
-    "expo-secure-store": "~12.1.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
